--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
             document.getElementById('firstName').textContent = firstName;
 
-            fetch(`/api/getUserName?firstName=${encodeURIComponent(firstName)}&lastName=${encodeURIComponent(lastName)}`)
+            fetch(`/api/getUser?firstName=${encodeURIComponent(firstName)}&lastName=${encodeURIComponent(lastName)}`)
                 .then(response => response.json())
                 .then(data => {
                     let userMessage;
