--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
                             });
                         }
                     } else {
-                        userMessage = "Не смог найти тебя в базе";
+                        userMessage += "Не смог найти тебя в базе";
                     }
                     document.getElementById('userMessage').textContent = userMessage;
                 })
