--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                             datesAttended.forEach(date => {
                                 const formattedDate = formatDate(date);
                                 const listItem = document.createElement('li');
-                                listItem.textContent = `- ${formattedDate}`;
+                                listItem.textContent = `${formattedDate}`;
                                 datesList.appendChild(listItem);
                             });
                         }
